message[3886]: update the webpages

--- a/genindex.html
+++ b/genindex.html
@@ -417,8 +417,6 @@
 </li>
       <li><a href="parallel/cpu.html#_CPPv4N5chase3mpi21ChaseMpiDLABlaslapack14preApplicationEP1TNSt6size_tENSt6size_tE">chase::mpi::ChaseMpiDLABlaslapack::preApplication (C++ function)</a>, <a href="parallel/cpu.html#_CPPv4N5chase3mpi21ChaseMpiDLABlaslapack14preApplicationEP1TP1TNSt6size_tENSt6size_tE">[1]</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="parallel/cpu.html#_CPPv4N5chase3mpi21ChaseMpiDLABlaslapack9RR_kernelENSt6size_tENSt6size_tEP1TNSt6size_tEP1T1T1TP4BaseI1TE">chase::mpi::ChaseMpiDLABlaslapack::RR_kernel (C++ function)</a>
 </li>
       <li><a href="parallel/cpu.html#_CPPv4N5chase3mpi21ChaseMpiDLABlaslapack4scalENSt6size_tEP1TP1TNSt6size_tE">chase::mpi::ChaseMpiDLABlaslapack::scal (C++ function)</a>
@@ -475,6 +473,8 @@
 </li>
       <li><a href="parallel/seq.html#_CPPv4N5chase3mpi24ChaseMpiDLABlaslapackSeq15postApplicationEP1TKNSt6size_tE">chase::mpi::ChaseMpiDLABlaslapackSeq::postApplication (C++ function)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="parallel/seq.html#_CPPv4N5chase3mpi24ChaseMpiDLABlaslapackSeq14preApplicationEP1TKNSt6size_tEKNSt6size_tE">chase::mpi::ChaseMpiDLABlaslapackSeq::preApplication (C++ function)</a>, <a href="parallel/seq.html#_CPPv4N5chase3mpi24ChaseMpiDLABlaslapackSeq14preApplicationEP1TP1TKNSt6size_tEKNSt6size_tE">[1]</a>
 </li>
       <li><a href="parallel/seq.html#_CPPv4N5chase3mpi24ChaseMpiDLABlaslapackSeq9RR_kernelENSt6size_tENSt6size_tEP1TNSt6size_tEP1T1T1TP4BaseI1TE">chase::mpi::ChaseMpiDLABlaslapackSeq::RR_kernel (C++ function)</a>
@@ -613,23 +613,67 @@
 </li>
       <li><a href="module/chasempiproperties.html#_CPPv4I0EN5chase3mpi18ChaseMpiPropertiesE">chase::mpi::ChaseMpiProperties (C++ class)</a>
 </li>
+      <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties2B_E">chase::mpi::ChaseMpiProperties::B_ (C++ member)</a>
+</li>
+      <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties13block_counts_E">chase::mpi::ChaseMpiProperties::block_counts_ (C++ member)</a>
+</li>
+      <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties13block_displs_E">chase::mpi::ChaseMpiProperties::block_displs_ (C++ member)</a>
+</li>
+      <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties11block_lens_E">chase::mpi::ChaseMpiProperties::block_lens_ (C++ member)</a>
+</li>
+      <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties2C_E">chase::mpi::ChaseMpiProperties::C_ (C++ member)</a>
+</li>
+      <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties7c_lens_E">chase::mpi::ChaseMpiProperties::c_lens_ (C++ member)</a>
+</li>
+      <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties7c_offs_E">chase::mpi::ChaseMpiProperties::c_offs_ (C++ member)</a>
+</li>
+      <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties9c_offs_l_E">chase::mpi::ChaseMpiProperties::c_offs_l_ (C++ member)</a>
+</li>
       <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties18ChaseMpiPropertiesENSt6size_tENSt6size_tENSt6size_tE8MPI_Comm">chase::mpi::ChaseMpiProperties::ChaseMpiProperties (C++ function)</a>, <a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties18ChaseMpiPropertiesENSt6size_tENSt6size_tENSt6size_tENSt6size_tENSt6size_tEiiPcii8MPI_Comm">[1]</a>
+</li>
+      <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties9col_comm_E">chase::mpi::ChaseMpiProperties::col_comm_ (C++ member)</a>
+</li>
+      <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties5comm_E">chase::mpi::ChaseMpiProperties::comm_ (C++ member)</a>
+</li>
+      <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties6coord_E">chase::mpi::ChaseMpiProperties::coord_ (C++ member)</a>
 </li>
       <li><a href="module/chasempiproperties.html#_CPPv4NK5chase3mpi18ChaseMpiProperties15create_matricesEP1TP4BaseI1TEP1TP4BaseI1TE">chase::mpi::ChaseMpiProperties::create_matrices (C++ function)</a>
 </li>
+      <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties5dims_E">chase::mpi::ChaseMpiProperties::dims_ (C++ member)</a>
+</li>
+      <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties10g_offsets_E">chase::mpi::ChaseMpiProperties::g_offsets_ (C++ member)</a>
+</li>
       <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties5get_BEv">chase::mpi::ChaseMpiProperties::get_B (C++ function)</a>
+</li>
+      <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties15get_blockcountsEv">chase::mpi::ChaseMpiProperties::get_blockcounts (C++ function)</a>
+</li>
+      <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties15get_blockdisplsEv">chase::mpi::ChaseMpiProperties::get_blockdispls (C++ function)</a>
+</li>
+      <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties13get_blocklensEv">chase::mpi::ChaseMpiProperties::get_blocklens (C++ function)</a>
 </li>
       <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties5get_CEv">chase::mpi::ChaseMpiProperties::get_C (C++ function)</a>
 </li>
       <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties12get_col_commEv">chase::mpi::ChaseMpiProperties::get_col_comm (C++ function)</a>
 </li>
+      <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties12get_col_lensEv">chase::mpi::ChaseMpiProperties::get_col_lens (C++ function)</a>
+</li>
+      <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties12get_col_offsEv">chase::mpi::ChaseMpiProperties::get_col_offs (C++ function)</a>
+</li>
+      <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties16get_col_offs_locEv">chase::mpi::ChaseMpiProperties::get_col_offs_loc (C++ function)</a>
+</li>
       <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties9get_coordEv">chase::mpi::ChaseMpiProperties::get_coord (C++ function)</a>
 </li>
       <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties8get_dimsEv">chase::mpi::ChaseMpiProperties::get_dims (C++ function)</a>
 </li>
+      <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties13get_g_offsetsEv">chase::mpi::ChaseMpiProperties::get_g_offsets (C++ function)</a>
+</li>
       <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties5get_HEv">chase::mpi::ChaseMpiProperties::get_H (C++ function)</a>
 </li>
+      <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties9get_icsrcEv">chase::mpi::ChaseMpiProperties::get_icsrc (C++ function)</a>
+</li>
       <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties7get_IMTEv">chase::mpi::ChaseMpiProperties::get_IMT (C++ function)</a>
+</li>
+      <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties9get_irsrcEv">chase::mpi::ChaseMpiProperties::get_irsrc (C++ function)</a>
 </li>
       <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties7get_ldbEv">chase::mpi::ChaseMpiProperties::get_ldb (C++ function)</a>
 </li>
@@ -639,17 +683,83 @@
 </li>
       <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties13get_max_blockEv">chase::mpi::ChaseMpiProperties::get_max_block (C++ function)</a>
 </li>
+      <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties6get_mbEv">chase::mpi::ChaseMpiProperties::get_mb (C++ function)</a>
+</li>
+      <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties11get_mblocksEv">chase::mpi::ChaseMpiProperties::get_mblocks (C++ function)</a>
+</li>
+      <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties11get_my_rankEv">chase::mpi::ChaseMpiProperties::get_my_rank (C++ function)</a>
+</li>
       <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties5get_NEv">chase::mpi::ChaseMpiProperties::get_N (C++ function)</a>
 </li>
       <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties5get_nEv">chase::mpi::ChaseMpiProperties::get_n (C++ function)</a>
 </li>
+      <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties6get_nbEv">chase::mpi::ChaseMpiProperties::get_nb (C++ function)</a>
+</li>
+      <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties11get_nblocksEv">chase::mpi::ChaseMpiProperties::get_nblocks (C++ function)</a>
+</li>
+      <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties10get_nprocsEv">chase::mpi::ChaseMpiProperties::get_nprocs (C++ function)</a>
+</li>
       <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties7get_offEPNSt6size_tEPNSt6size_tEPNSt6size_tEPNSt6size_tE">chase::mpi::ChaseMpiProperties::get_off (C++ function)</a>, <a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties7get_offEv">[1]</a>
 </li>
+      <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties13get_offs_lensERPNSt6size_tERPNSt6size_tERPNSt6size_tERPNSt6size_tERPNSt6size_tERPNSt6size_tE">chase::mpi::ChaseMpiProperties::get_offs_lens (C++ function)</a>
+</li>
       <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties12get_row_commEv">chase::mpi::ChaseMpiProperties::get_row_comm (C++ function)</a>
+</li>
+      <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties12get_row_lensEv">chase::mpi::ChaseMpiProperties::get_row_lens (C++ function)</a>
+</li>
+      <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties12get_row_offsEv">chase::mpi::ChaseMpiProperties::get_row_offs (C++ function)</a>
+</li>
+      <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties16get_row_offs_locEv">chase::mpi::ChaseMpiProperties::get_row_offs_loc (C++ function)</a>
+</li>
+      <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties12get_sendlensEv">chase::mpi::ChaseMpiProperties::get_sendlens (C++ function)</a>
 </li>
       <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties6GetNevEv">chase::mpi::ChaseMpiProperties::GetNev (C++ function)</a>
 </li>
       <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties6GetNexEv">chase::mpi::ChaseMpiProperties::GetNex (C++ function)</a>
+</li>
+      <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties2H_E">chase::mpi::ChaseMpiProperties::H_ (C++ member)</a>
+</li>
+      <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties6icsrc_E">chase::mpi::ChaseMpiProperties::icsrc_ (C++ member)</a>
+</li>
+      <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties4IMT_E">chase::mpi::ChaseMpiProperties::IMT_ (C++ member)</a>
+</li>
+      <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties6irsrc_E">chase::mpi::ChaseMpiProperties::irsrc_ (C++ member)</a>
+</li>
+      <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties2m_E">chase::mpi::ChaseMpiProperties::m_ (C++ member)</a>
+</li>
+      <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties10max_block_E">chase::mpi::ChaseMpiProperties::max_block_ (C++ member)</a>
+</li>
+      <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties3mb_E">chase::mpi::ChaseMpiProperties::mb_ (C++ member)</a>
+</li>
+      <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties8mblocks_E">chase::mpi::ChaseMpiProperties::mblocks_ (C++ member)</a>
+</li>
+      <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties2N_E">chase::mpi::ChaseMpiProperties::N_ (C++ member)</a>
+</li>
+      <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties2n_E">chase::mpi::ChaseMpiProperties::n_ (C++ member)</a>
+</li>
+      <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties3nb_E">chase::mpi::ChaseMpiProperties::nb_ (C++ member)</a>
+</li>
+      <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties8nblocks_E">chase::mpi::ChaseMpiProperties::nblocks_ (C++ member)</a>
+</li>
+      <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties4nev_E">chase::mpi::ChaseMpiProperties::nev_ (C++ member)</a>
+</li>
+      <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties4nex_E">chase::mpi::ChaseMpiProperties::nex_ (C++ member)</a>
+</li>
+      <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties7nprocs_E">chase::mpi::ChaseMpiProperties::nprocs_ (C++ member)</a>
+</li>
+      <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties4off_E">chase::mpi::ChaseMpiProperties::off_ (C++ member)</a>
+</li>
+      <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties7r_lens_E">chase::mpi::ChaseMpiProperties::r_lens_ (C++ member)</a>
+</li>
+      <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties7r_offs_E">chase::mpi::ChaseMpiProperties::r_offs_ (C++ member)</a>
+</li>
+      <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties9r_offs_l_E">chase::mpi::ChaseMpiProperties::r_offs_l_ (C++ member)</a>
+</li>
+      <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties5rank_E">chase::mpi::ChaseMpiProperties::rank_ (C++ member)</a>
+</li>
+      <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties9row_comm_E">chase::mpi::ChaseMpiProperties::row_comm_ (C++ member)</a>
+</li>
+      <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties10send_lens_E">chase::mpi::ChaseMpiProperties::send_lens_ (C++ member)</a>
 </li>
       <li><a href="module/perf.html#_CPPv4I0EN5chase25PerformanceDecoratorChaseE">chase::PerformanceDecoratorChase (C++ class)</a>
 </li>
