message[15413]: update the webpages

--- a/module/namespace.html
+++ b/module/namespace.html
@@ -192,15 +192,15 @@ kernels required by ChASE. It includes the
 following functionalities:</p>
 <blockquote>
 <div><ul class="simple">
-<li><p>HEMM: Hermitian Matrix-Matrix Multiplication</p></li>
-<li><p>QR: QR factorization</p></li>
-<li><p>RR: Rayleigh-Ritz projection and small problem solver</p></li>
-<li><p>Resd: compute the eigenpair residuals</p></li>
-<li><p>Lanczos: estimate the bounds of user-interested spectrum by Lanczos eigensolver</p></li>
-<li><p>LanczosDos: estimate the spectral distribution of eigenvalues</p></li>
-<li><p>Swap: swap the two matrices of vectors used in the Chebyschev filter</p></li>
-<li><p>Locking: locking the converged eigenpairs</p></li>
-<li><p>Shift: shift the diagonal of the A matrix used in the 3-terms
+<li><p><code class="docutils literal notranslate"><span class="pre">HEMM</span></code>: Hermitian Matrix-Matrix Multiplication</p></li>
+<li><p><code class="docutils literal notranslate"><span class="pre">QR</span></code>: QR factorization</p></li>
+<li><p><code class="docutils literal notranslate"><span class="pre">RR</span></code>: Rayleigh-Ritz projection and small problem solver</p></li>
+<li><p><code class="docutils literal notranslate"><span class="pre">Resd</span></code>: compute the eigenpair residuals</p></li>
+<li><p><code class="docutils literal notranslate"><span class="pre">Lanczos</span></code>: estimate the bounds of user-interested spectrum by Lanczos eigensolver</p></li>
+<li><p><code class="docutils literal notranslate"><span class="pre">LanczosDos</span></code>: estimate the spectral distribution of eigenvalues</p></li>
+<li><p><code class="docutils literal notranslate"><span class="pre">Swap</span></code>: swap the two matrices of vectors used in the Chebyschev filter</p></li>
+<li><p><code class="docutils literal notranslate"><span class="pre">Locking</span></code>: locking the converged eigenpairs</p></li>
+<li><p><code class="docutils literal notranslate"><span class="pre">Shift</span></code>: shift the diagonal of matrix <code class="docutils literal notranslate"><span class="pre">A</span></code> used in the 3-terms
 recurrence relation implemented in the Chebyschev filter</p></li>
 <li><p>etc ..</p></li>
 </ul>
