message[7632]: update the webpages

--- a/genindex.html
+++ b/genindex.html
@@ -527,10 +527,10 @@
 </li>
       <li><a href="parallel/seq.html#_CPPv4N5chase3mpi24ChaseMpiDLABlaslapackSeq15postApplicationEP1TKNSt6size_tE">chase::mpi::ChaseMpiDLABlaslapackSeq::postApplication (C++ function)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="parallel/seq.html#_CPPv4N5chase3mpi24ChaseMpiDLABlaslapackSeq14preApplicationEP1TKNSt6size_tEKNSt6size_tE">chase::mpi::ChaseMpiDLABlaslapackSeq::preApplication (C++ function)</a>, <a href="parallel/seq.html#_CPPv4N5chase3mpi24ChaseMpiDLABlaslapackSeq14preApplicationEP1TP1TKNSt6size_tEKNSt6size_tE">[1]</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="parallel/seq.html#_CPPv4N5chase3mpi24ChaseMpiDLABlaslapackSeq9RR_kernelENSt6size_tENSt6size_tEP1TNSt6size_tEP1T1T1TP4BaseI1TE">chase::mpi::ChaseMpiDLABlaslapackSeq::RR_kernel (C++ function)</a>
 </li>
       <li><a href="parallel/seq.html#_CPPv4N5chase3mpi24ChaseMpiDLABlaslapackSeq4scalENSt6size_tEP1TP1TNSt6size_tE">chase::mpi::ChaseMpiDLABlaslapackSeq::scal (C++ function)</a>
@@ -729,6 +729,8 @@
 </li>
       <li><a href="module/chasempiproperties.html#_CPPv4NK5chase3mpi18ChaseMpiProperties15create_matricesEP1TP4BaseI1TEP1TP4BaseI1TE">chase::mpi::ChaseMpiProperties::create_matrices (C++ function)</a>
 </li>
+      <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties11data_layoutE">chase::mpi::ChaseMpiProperties::data_layout (C++ member)</a>
+</li>
       <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties5dims_E">chase::mpi::ChaseMpiProperties::dims_ (C++ member)</a>
 </li>
       <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties10g_offsets_E">chase::mpi::ChaseMpiProperties::g_offsets_ (C++ member)</a>
@@ -752,6 +754,8 @@
       <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties16get_col_offs_locEv">chase::mpi::ChaseMpiProperties::get_col_offs_loc (C++ function)</a>
 </li>
       <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties9get_coordEv">chase::mpi::ChaseMpiProperties::get_coord (C++ function)</a>
+</li>
+      <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties14get_dataLayoutEv">chase::mpi::ChaseMpiProperties::get_dataLayout (C++ function)</a>
 </li>
       <li><a href="module/chasempiproperties.html#_CPPv4N5chase3mpi18ChaseMpiProperties8get_dimsEv">chase::mpi::ChaseMpiProperties::get_dims (C++ function)</a>
 </li>
