--- a/v1.7.0/genindex.html
+++ b/v1.7.0/genindex.html
@@ -51,6 +51,8 @@
   </label>
   <select id="version-select" onchange="switchVersion(this.value)" style="width: 100%; padding: 5px; border: 1px solid #2980B9; border-radius: 3px; background: white; color: #333; font-size: 13px;"><option value="/ChASE/latest/">
       latest
+    </option><option value="/ChASE/v1.7.0/">
+      v1.7.0
     </option></select>
 </div><script>
 function switchVersion(url) {
