--- a/v1.7.0/genindex.html
+++ b/v1.7.0/genindex.html
@@ -641,6 +641,80 @@ function switchVersion(url) {
 </li>
       <li><a href="api/matrices.html#_CPPv4N5chase15distMultiVector17DistMultiVector1DD0Ev">chase::distMultiVector::DistMultiVector1D::~DistMultiVector1D (C++ function)</a>
 </li>
+      <li><a href="api/matrices.html#_CPPv4I0_16CommunicatorType0EN5chase15distMultiVector28DistMultiVectorBlockCyclic1DE">chase::distMultiVector::DistMultiVectorBlockCyclic1D (C++ class)</a>
+</li>
+      <li><a href="api/matrices.html#_CPPv4I0EN5chase15distMultiVector28DistMultiVectorBlockCyclic1D5cloneE9CloneTypeNSt6size_tENSt6size_tE">chase::distMultiVector::DistMultiVectorBlockCyclic1D::clone (C++ function)</a>, <a href="api/matrices.html#_CPPv4I0EN5chase15distMultiVector28DistMultiVectorBlockCyclic1D5cloneE9CloneTypev">[1]</a>
+</li>
+      <li><a href="api/matrices.html#_CPPv4I0EN5chase15distMultiVector28DistMultiVectorBlockCyclic1D6clone2ENSt10unique_ptrI9CloneTypeEENSt6size_tENSt6size_tE">chase::distMultiVector::DistMultiVectorBlockCyclic1D::clone2 (C++ function)</a>, <a href="api/matrices.html#_CPPv4I0EN5chase15distMultiVector28DistMultiVectorBlockCyclic1D6clone2ENSt10unique_ptrI9CloneTypeEEv">[1]</a>
+</li>
+      <li><a href="api/matrices.html#_CPPv4N5chase15distMultiVector28DistMultiVectorBlockCyclic1D17communicator_typeE">chase::distMultiVector::DistMultiVectorBlockCyclic1D::communicator_type (C++ member)</a>
+</li>
+      <li><a href="api/matrices.html#_CPPv4N5chase15distMultiVector28DistMultiVectorBlockCyclic1D8cpu_dataEv">chase::distMultiVector::DistMultiVectorBlockCyclic1D::cpu_data (C++ function)</a>
+</li>
+      <li><a href="api/matrices.html#_CPPv4N5chase15distMultiVector28DistMultiVectorBlockCyclic1D6cpu_ldEv">chase::distMultiVector::DistMultiVectorBlockCyclic1D::cpu_ld (C++ function)</a>
+</li>
+      <li><a href="api/matrices.html#_CPPv4N5chase15distMultiVector28DistMultiVectorBlockCyclic1D3D2HEv">chase::distMultiVector::DistMultiVectorBlockCyclic1D::D2H (C++ function)</a>
+</li>
+      <li><a href="api/matrices.html#_CPPv4N5chase15distMultiVector28DistMultiVectorBlockCyclic1D28DistMultiVectorBlockCyclic1DENSt6size_tENSt6size_tENSt6size_tENSt10shared_ptrIN5chase4grid13MpiGrid2DBaseEEE">chase::distMultiVector::DistMultiVectorBlockCyclic1D::DistMultiVectorBlockCyclic1D (C++ function)</a>, <a href="api/matrices.html#_CPPv4N5chase15distMultiVector28DistMultiVectorBlockCyclic1D28DistMultiVectorBlockCyclic1DENSt6size_tENSt6size_tENSt6size_tENSt6size_tENSt6size_tEP1TNSt10shared_ptrIN5chase4grid13MpiGrid2DBaseEEE">[1]</a>, <a href="api/matrices.html#_CPPv4N5chase15distMultiVector28DistMultiVectorBlockCyclic1D28DistMultiVectorBlockCyclic1DEv">[2]</a>
+</li>
+      <li><a href="api/matrices.html#_CPPv4NK5chase15distMultiVector28DistMultiVectorBlockCyclic1D6g_colsEv">chase::distMultiVector::DistMultiVectorBlockCyclic1D::g_cols (C++ function)</a>
+</li>
+      <li><a href="api/matrices.html#_CPPv4NK5chase15distMultiVector28DistMultiVectorBlockCyclic1D5g_offEv">chase::distMultiVector::DistMultiVectorBlockCyclic1D::g_off (C++ function)</a>
+</li>
+      <li><a href="api/matrices.html#_CPPv4NK5chase15distMultiVector28DistMultiVectorBlockCyclic1D6g_rowsEv">chase::distMultiVector::DistMultiVectorBlockCyclic1D::g_rows (C++ function)</a>
+</li>
+      <li><a href="api/matrices.html#_CPPv4N5chase15distMultiVector28DistMultiVectorBlockCyclic1D18get_scalapack_descEv">chase::distMultiVector::DistMultiVectorBlockCyclic1D::get_scalapack_desc (C++ function)</a>
+</li>
+      <li><a href="api/matrices.html#_CPPv4NK5chase15distMultiVector28DistMultiVectorBlockCyclic1D10getMpiGridEv">chase::distMultiVector::DistMultiVectorBlockCyclic1D::getMpiGrid (C++ function)</a>
+</li>
+      <li><a href="api/matrices.html#_CPPv4NK5chase15distMultiVector28DistMultiVectorBlockCyclic1D21getMpiGrid_shared_ptrEv">chase::distMultiVector::DistMultiVectorBlockCyclic1D::getMpiGrid_shared_ptr (C++ function)</a>
+</li>
+      <li><a href="api/matrices.html#_CPPv4NK5chase15distMultiVector28DistMultiVectorBlockCyclic1D30getMultiVectorCommunicatorTypeEv">chase::distMultiVector::DistMultiVectorBlockCyclic1D::getMultiVectorCommunicatorType (C++ function)</a>
+</li>
+      <li><a href="api/matrices.html#_CPPv4NK5chase15distMultiVector28DistMultiVectorBlockCyclic1D30getMultiVectorDistributionTypeEv">chase::distMultiVector::DistMultiVectorBlockCyclic1D::getMultiVectorDistributionType (C++ function)</a>
+</li>
+      <li><a href="api/matrices.html#_CPPv4N5chase15distMultiVector28DistMultiVectorBlockCyclic1D3H2DEv">chase::distMultiVector::DistMultiVectorBlockCyclic1D::H2D (C++ function)</a>
+</li>
+      <li><a href="api/matrices.html#_CPPv4NK5chase15distMultiVector28DistMultiVectorBlockCyclic1D6l_colsEv">chase::distMultiVector::DistMultiVectorBlockCyclic1D::l_cols (C++ function)</a>
+</li>
+      <li><a href="api/matrices.html#_CPPv4N5chase15distMultiVector28DistMultiVectorBlockCyclic1D6l_dataEv">chase::distMultiVector::DistMultiVectorBlockCyclic1D::l_data (C++ function)</a>
+</li>
+      <li><a href="api/matrices.html#_CPPv4NK5chase15distMultiVector28DistMultiVectorBlockCyclic1D6l_halfEv">chase::distMultiVector::DistMultiVectorBlockCyclic1D::l_half (C++ function)</a>
+</li>
+      <li><a href="api/matrices.html#_CPPv4NK5chase15distMultiVector28DistMultiVectorBlockCyclic1D4l_ldEv">chase::distMultiVector::DistMultiVectorBlockCyclic1D::l_ld (C++ function)</a>
+</li>
+      <li><a href="api/matrices.html#_CPPv4NK5chase15distMultiVector28DistMultiVectorBlockCyclic1D6l_rowsEv">chase::distMultiVector::DistMultiVectorBlockCyclic1D::l_rows (C++ function)</a>
+</li>
+      <li><a href="api/matrices.html#_CPPv4N5chase15distMultiVector28DistMultiVectorBlockCyclic1D10loc_matrixEv">chase::distMultiVector::DistMultiVectorBlockCyclic1D::loc_matrix (C++ function)</a>
+</li>
+      <li><a href="api/matrices.html#_CPPv4N5chase15distMultiVector28DistMultiVectorBlockCyclic1D24m_contiguous_global_offsEv">chase::distMultiVector::DistMultiVectorBlockCyclic1D::m_contiguous_global_offs (C++ function)</a>
+</li>
+      <li><a href="api/matrices.html#_CPPv4N5chase15distMultiVector28DistMultiVectorBlockCyclic1D17m_contiguous_lensEv">chase::distMultiVector::DistMultiVectorBlockCyclic1D::m_contiguous_lens (C++ function)</a>
+</li>
+      <li><a href="api/matrices.html#_CPPv4N5chase15distMultiVector28DistMultiVectorBlockCyclic1D23m_contiguous_local_offsEv">chase::distMultiVector::DistMultiVectorBlockCyclic1D::m_contiguous_local_offs (C++ function)</a>
+</li>
+      <li><a href="api/matrices.html#_CPPv4NK5chase15distMultiVector28DistMultiVectorBlockCyclic1D2mbEv">chase::distMultiVector::DistMultiVectorBlockCyclic1D::mb (C++ function)</a>
+</li>
+      <li><a href="api/matrices.html#_CPPv4NK5chase15distMultiVector28DistMultiVectorBlockCyclic1D7mblocksEv">chase::distMultiVector::DistMultiVectorBlockCyclic1D::mblocks (C++ function)</a>
+</li>
+      <li><a href="api/matrices.html#_CPPv4N5chase15distMultiVector28DistMultiVectorBlockCyclic1D13platform_typeE">chase::distMultiVector::DistMultiVectorBlockCyclic1D::platform_type (C++ type)</a>
+</li>
+      <li><a href="api/matrices.html#_CPPv4I_16CommunicatorType0EN5chase15distMultiVector28DistMultiVectorBlockCyclic1D16redistributeImplEvP28DistMultiVectorBlockCyclic1DI1T16target_comm_type13OtherPlatformE">chase::distMultiVector::DistMultiVectorBlockCyclic1D::redistributeImpl (C++ function)</a>, <a href="api/matrices.html#_CPPv4I_16CommunicatorType0EN5chase15distMultiVector28DistMultiVectorBlockCyclic1D16redistributeImplEvP28DistMultiVectorBlockCyclic1DI1T16target_comm_type13OtherPlatformENSt6size_tENSt6size_tE">[1]</a>
+</li>
+      <li><a href="api/matrices.html#_CPPv4I_16CommunicatorTypeEN5chase15distMultiVector28DistMultiVectorBlockCyclic1D21redistributeImplAsyncEvP28DistMultiVectorBlockCyclic1DI1T16target_comm_typeN5chase8platform3GPUEENSt6size_tENSt6size_tEP12cudaStream_t">chase::distMultiVector::DistMultiVectorBlockCyclic1D::redistributeImplAsync (C++ function)</a>, <a href="api/matrices.html#_CPPv4I_16CommunicatorTypeEN5chase15distMultiVector28DistMultiVectorBlockCyclic1D21redistributeImplAsyncEvP28DistMultiVectorBlockCyclic1DI1T16target_comm_typeN5chase8platform3GPUEEP12cudaStream_t">[1]</a>
+</li>
+      <li><a href="api/matrices.html#_CPPv4N5chase15distMultiVector28DistMultiVectorBlockCyclic1D25scalapack_descriptor_initEv">chase::distMultiVector::DistMultiVectorBlockCyclic1D::scalapack_descriptor_init (C++ function)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/matrices.html#_CPPv4I_16CommunicatorType0EN5chase15distMultiVector28DistMultiVectorBlockCyclic1D4swapEvR28DistMultiVectorBlockCyclic1DI1T13OtherCommType13OtherPlatformE">chase::distMultiVector::DistMultiVectorBlockCyclic1D::swap (C++ function)</a>
+</li>
+      <li><a href="api/matrices.html#_CPPv4N5chase15distMultiVector28DistMultiVectorBlockCyclic1D7swap_ijENSt6size_tENSt6size_tE">chase::distMultiVector::DistMultiVectorBlockCyclic1D::swap_ij (C++ function)</a>
+</li>
+      <li><a href="api/matrices.html#_CPPv4N5chase15distMultiVector28DistMultiVectorBlockCyclic1D10value_typeE">chase::distMultiVector::DistMultiVectorBlockCyclic1D::value_type (C++ type)</a>
+</li>
+      <li><a href="api/matrices.html#_CPPv4N5chase15distMultiVector28DistMultiVectorBlockCyclic1DD0Ev">chase::distMultiVector::DistMultiVectorBlockCyclic1D::~DistMultiVectorBlockCyclic1D (C++ function)</a>
+</li>
       <li><a href="api/grid.html#_CPPv4I_9GridMajorEN5chase4grid9MpiGrid2DE">chase::grid::MpiGrid2D (C++ class)</a>
 </li>
       <li><a href="api/grid.html#_CPPv4N5chase4grid9MpiGrid2D22get_blacs_colcomm_ctxtEv">chase::grid::MpiGrid2D::get_blacs_colcomm_ctxt (C++ function)</a>
@@ -669,8 +743,6 @@ function switchVersion(url) {
 </li>
       <li><a href="api/grid.html#_CPPv4NK5chase4grid9MpiGrid2D12get_row_commEv">chase::grid::MpiGrid2D::get_row_comm (C++ function)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/grid.html#_CPPv4NK5chase4grid9MpiGrid2D12getGridMajorEv">chase::grid::MpiGrid2D::getGridMajor (C++ function)</a>
 </li>
       <li><a href="api/grid.html#_CPPv4N5chase4grid9MpiGrid2D9MpiGrid2DE8MPI_Comm">chase::grid::MpiGrid2D::MpiGrid2D (C++ function)</a>, <a href="api/grid.html#_CPPv4N5chase4grid9MpiGrid2D9MpiGrid2DEii8MPI_Comm">[1]</a>
@@ -1143,7 +1215,7 @@ function switchVersion(url) {
   <hr/>
 
   <div role="contentinfo">
-    <p>&#169; Copyright 2023, SimLab Quantum Materials.</p>
+    <p>&#169; Copyright 2026, SimLab Quantum Materials.</p>
   </div>
 
   Built with <a href="https://www.sphinx-doc.org/">Sphinx</a> using a
